# HermesKanban

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
.hermes/plans/: 2026-05-06-kanban-workflow-implementation-plan.md  2026-05-06-prompt-workflow-designer-plan.md
deploy/systemd/: hermes-kanban-webui.service  hermes-kanban.service.template
docs/: INSTALL.md  TROUBLESHOOTING.md
docs/plans/: hermes-kanban-continuous-improvement.md  issue-6-responsive-progressive-ui-overhaul.md
kanban_webui/: app.py  app_update.py  auth.py  config.py  hermes_imports.py  kanban_api.py  operations.py  pr_review_automation.py  ui_registry.py  workflow_drafts.py  workflow_planner.py  workflows.py
scripts/: check_static_js.py  hermes-kanban  hermes-kanban-webui-start  hermes-kanban-webui-stop  install.sh
static/: api.js  app.js  board.js  dependency-lines.js  design-tokens.css  dragdrop.js  drawer.js  forms.js  i18n.js  index.html  mobile.js  monitor.js  operations.js  state.js  style.css  theme.js  update.js
tests/: conftest.py  test_app_update.py  test_board_ordering.py  test_cli_parity_matrix.py  test_health.py  test_install_contract.py  test_operations.py  test_performance_headers.py  test_pr_review_automation.py  test_static_smoke.py  test_task_cancellation.py  test_task_lifecycle.py  test_workflow_drafts.py  test_workflows.py
